experimenting with bootstrap themes, styles buttons and squashes layout bug

--- a/app/assets/stylesheets/friends.css.scss
+++ b/app/assets/stylesheets/friends.css.scss
@@ -5,3 +5,7 @@
 .edit_friend_form {
 	visibility: hidden;
 }
+
+.full_width {
+	 display: block;
+}
